--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
-    <head>
-        <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-        <title>Ejemplo de menu 1</title>
-    </head>
-    <body bgcolor="#cddf89">
-        <h1><center>Proyecto de sitio Web 2022 - 16-01</center></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1><center>Proyecto de sitio Web 2022 - 16-01</center></h1>
         <h3>
             <p align="center">
                 Edgar Rolando Gutierrez Alvarado<br />
@@ -14,5 +17,5 @@
                 3213943677
             </p>
         </h3>
-    </body>
+</body>
 </html>
