--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 </head>
 <body>
     <h1><center>Proyecto de sitio Web 2022 - 16-01</center></h1>
-        <h3>
-            <p align="center">
-                Edgar Rolando Gutierrez Alvarado<br />
-                Ingenieria de Sitemas<br />
-                2022/02/17<br />
-                rolando06.g.a@gmail.com<br />
-                3213943677
-            </p>
-        </h3>
+    <h3>
+        <p align="center">
+            Edgar Rolando Gutierrez Alvarado<br />
+            Ingenieria de Sitemas<br />
+            2022/02/17<br />
+            rolando06.g.a@gmail.com<br />
+            3213943677
+        </p>
+    </h3>
+    <nav>
+        <ul>
+            <li><a href="Desing.html">Fase 2</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
