--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style type="text/css">
+        h1{
+            text-align: center;
+            color: blue;
+            text-decoration-line: underline;
+        }
+        .textos{
+            text-align: center;
+        }
+        #correo {
+            color: blue;
+            text-align: center;
+            text-decoration-line: underline;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
-    <h1><center>Proyecto de sitio Web 2022 - 16-01</center></h1>
-    <h3>
-        <p align="center">
-            Edgar Rolando Gutierrez Alvarado<br />
-            Ingenieria de Sitemas<br />
-            2022/02/17<br />
-            rolando06.g.a@gmail.com<br />
-            3213943677
-        </p>
-    </h3>
+    <div class="contenedor">
+        <h1>Proyecto de sitio Web 2022 - 16-01</h1>
+        <h3>
+            <p class="textos">
+                Edgar Rolando Gutierrez Alvarado<br>
+                Programa: Ingenieria de Sistemas<br>
+                2022/02/17<br>
+                3213943677<br>
+            </p>
+            <p id="correo">rolando06.g.a@gmail.com</p>
+        </h3>
+    </div>
     <nav>
         <ul>
             <li><a href="Desing.html">Fase 2</a></li>
+            <li><a href="Fase3/index.html">Fase 3</a></li>
         </ul>
     </nav>
 </body>
